--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 footer {
-  color: whitesmoke;
+  margin-top: 10px;
+  color: rgb(255, 255, 255);
   background-color: rgb(19, 18, 22);
 }
 #titulo {
@@ -14,17 +15,18 @@ footer {
   font-size: larger;
 }
 .header {
-  position: fixed;
+  position:sticky;
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 100px;
+  padding: 30px 10%;
   background: rgb(19, 18, 22);
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
 }
+
 .logo {
   font-family: sans-serif;
   font-size: 32px;
@@ -55,15 +57,15 @@ footer {
 }
 
 body{
-  margin: 20px;
+  margin: 0px;
   padding: 0;
   text-align: center;
 }
 .container{
   display: grid;
-  grid-template-columns: repeat(15,1fr);
-  grid-auto-rows: 100px 300px;
+  grid-template-columns: repeat(3,1fr);
   grid-gap: 10px;
+  grid-auto-flow: dense;
 }
 .gallery-item{
   width:100%;
@@ -92,68 +94,33 @@ body{
   top: 50%;
   left:50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 25px;
   pointer-events: none;
   z-index: 4;
   transition: .3s ease-in-out;
-  -webkit-backdrop-filter: blur(5px) saturate(1.8);
-  backdrop-filter: blur(5px) saturate(1.8);
 }
 .gallery-item:hover .text{
   opacity: 1;
-  animation: move-down .3s linear;
   padding: 1em;
   width: 100%;
 }
-.w-1{
-  grid-column: span 1;
-}
-.w-2{
-  grid-column: span 2;
-}
-.w-3{
-  grid-column: span 3;
-}
-.w-4{
-  grid-column: span 4;
-}
-.w-5{
-  grid-column: span 5;
-}
-.w-6{
-  grid-column: span 6;
-}
-.h-1{
-  grid-row: 1;
-}
-.h-2{
-  grid-row: 2;
-}
-.h-3{
-  grid-row: 3;
-}
-.h-4{
-  grid-row: 4;
-}
-.h-5{
-  grid-row: 5;
-}
-.h-6{
-  grid-row: 6;
-}
 
 
 
-
-@keyframes move-down{
-  0%{
-    top:10%
-  }
-  50%{
-    top:35%
-  }
-  100%{
-    top:50%
-  }
+@media screen and (max-width:780px){
+  .container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+}
+}
+@media screen and (max-width:500px){
+  .container{
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+}
 }
